# ai-app-kodotakai

./: .gitattributes  .gitignore  LICENSE  README.md  api_cache.py  cache_manager.py  cleanup_final.py  config.py  download_models.py  enhanced_recommendations.py  env_example.txt  google_maps_client.py  hotel_data_generator.py  hotel_recommendations.py  mobile_app_demo_report.json  optimize_simple.py  pyproject.toml  quick_setup.py  requirements.txt  setup_environment.py  setup_google_maps.py  setup_log.txt  train_simple.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
data/: fake_hotel_data.json
data/sincelejo_sucre/: sample_data.json
docs/: IMPLEMENTACION_GOOGLE_MAPS.md  OPTIMIZACION_API.md  RESUMEN_FINAL.md  demo_ia_turistica.html  google_maps_integration_guide.md  mobile_integration_guide.md  quick_start_guide.md
examples/: basic_usage.py  mobile_demo.py
models/final/: mlp_recommendations.pkl  recommendation_features.pkl  rf_classification.pkl
models/final/mobile/: classification_model_mobile.pkl  embedding_model_mobile.pkl  recommendation_model.tflite  recommendation_model_mobile.pkl
models/hotel_recommendations/: hotel_recommendation_model.pkl
models/trained/: activity_embeddings.pkl  label_encoder.pkl  mlp_recommendations.pkl  recommendation_features.pkl  rf_classification.pkl  text_features.pkl  training_report.json
