[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ia-turistica-colombia"
version = "1.0.0"
description = "Sistema de IA para recomendaciones turísticas en Colombia (Sincelejo y Sucre)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Equipo IA Turística", email = "contacto@ia-turistica-colombia.com"}
]
maintainers = [
    {name = "Equipo IA Turística", email = "contacto@ia-turistica-colombia.com"}
]
keywords = ["ai", "tourism", "colombia", "recommendations", "machine-learning"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
    "sentence-transformers>=2.0.0",
    "transformers>=4.20.0",
    "torch>=1.12.0",
    "tensorflow>=2.8.0",
    "onnx>=1.12.0",
    "onnxruntime>=1.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=0.17",
]
mobile = [
    "tensorflow-lite>=2.8.0",
    "onnxruntime-mobile>=1.12.0",
]

[project.urls]
Homepage = "https://github.com/ia-turistica-colombia/ia-turistica-colombia"
Documentation = "https://ia-turistica-colombia.readthedocs.io"
Repository = "https://github.com/ia-turistica-colombia/ia-turistica-colombia.git"
"Bug Tracker" = "https://github.com/ia-turistica-colombia/ia-turistica-colombia/issues"

[project.scripts]
ia-turistica = "ia_turistica.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ia_turistica*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=ia_turistica",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
